# dwd4cast

./: .gitignore  README.md  pyproject.toml
dwd4cast/: __init__.py  cli.py  forecast.py  utils.py
dwd4cast/tests/: test_functions.py
pyDWD/: __init__.py  cli.py
